# Matrix-OpenMP

./: .gitignore  CMakeLists.txt  base_mul_matrix.cpp  base_mul_matrix.h  create_matrix.cpp  example.cpp  mul_matrix.cpp  strassen_mul_1d.cpp  strassen_mul_1d.h  strassen_mul_1d_omp.cpp  strassen_mul_1d_omp.h  strassen_mul_2d.cpp  strassen_mul_2d.h  strassen_mul_2d_omp.cpp  strassen_mul_2d_omp.h
matrix/: matrix_2_[512x512].txt
res_1/: res_time_compute-v2_2d_[1024].txt  res_time_compute-v2_2d_[2048].txt  res_time_compute-v2_2d_[512].txt
